<resources>
    <string name="app_name">SMS Spoofer</string>
    <string name="module_enabled">Enable Module</string>
    <string name="module_disabled">Disable Module</string>
    <string name="active_sender">Active Sender ID:</string>
    <string name="no_sender_selected">No sender selected</string>
    <string name="active_sender_format">Active Sender ID: %1$s</string>
    <string name="add_new_sender">Add New Sender</string>
    <string name="sender_name">Sender Name</string>
    <string name="sender_id">Sender ID (e.g., ABC123)</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="sender_name_required">Please enter a sender name</string>
    <string name="sender_id_required">Please enter a sender ID</string>
    <string name="sender_deleted">%1$s deleted</string>
    <string name="undo">Undo</string>
</resources>
